--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "axios": "^1.8.4",
     "lucide-vue-next": "^0.486.0",
     "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.5",
     "tailwindcss": "^4.1.0",
     "vue": "^3.5.13",
     "vue-material-design-icons": "^5.3.1",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toast-notification": "^3.1.3",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
